--- a/borabill/index.html
+++ b/borabill/index.html
@@ -16,8 +16,8 @@
             srcset="">
         <p class="lead">Eu sou Gustavo</p>
         <h1>Eu estudo programação</h1>
-        <p>Sou Engenheiro de Computação e Pedagoga. Estudo pensamento computacional no Ensino
-            Médio. Aprendo sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p>Estou aprendendo Engenheira da Computação,no Ensino
+            Médio, Aprendo sobre HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
@@ -51,12 +51,14 @@
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                            Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <h5 class="card-title">Site da minha escola, La Salle</h5>
+                        <p class="card-text">
+                            A escola La Salle foi fundada em 1680 por São João Batista de La Salle, na França, 
+                            como parte de um esforço para oferecer educação de qualidade a crianças de classes menos favorecidas. 
+                            O método educativo promovido enfatizava a formação integral do aluno, incluindo aspectos espirituais e sociais. Com o tempo, 
+                            a instituição se expandiu globalmente, estabelecendo escolas em diversos países. Hoje, 
+                            La Salle é reconhecida por seu compromisso com a educação inclusiva e a formação de valores, 
+                            visando o desenvolvimento integral dos alunos. </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
@@ -68,12 +70,17 @@
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
+                        <h5 class="card-title">Flashcards
                         </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
-                        </p>
+                        <p class="card-text">
+                            Flashcards são cartões utilizados para estudo, geralmente com uma 
+                            pergunta ou conceito de um lado e a resposta ou explicação do outro. 
+                            Eles ajudam na memorização e na revisão de informações de forma interativa e eficaz. 
+                            Flashcards podem ser feitos à mão ou digitais e são usados em diversas áreas do conhecimento, 
+                            como idiomas, ciências e história. O método de repetição espaçada, que envolve revisar os cards em intervalos crescentes, 
+                            aumenta a retenção a longo prazo. Além disso, eles podem ser personalizados com imagens e exemplos, tornando o aprendizado mais dinâmico e 
+                            interessante.
+                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
                     </div>
